--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ social-network-links:
   rss: false
   email: "devvink@gmail.com"
 #  facebook: deanattali
-  github: daattali
+  github: DevvinK
 #   twitter: daattali
 #  reddit: yourname
   linkedin: devvin-k
