--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ social-network-links:
   github: DevvinK
 #   twitter: daattali
 #  reddit: yourname
-  linkedin: devvin-k
+  linkedin: DevvinKraatz
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
