--- a/_config.yml
+++ b/_config.yml
@@ -67,8 +67,8 @@ author:
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
-  rss: false
-  email: "devvink@gmail.com"
+#   rss: false
+  email: "kraatzdevvin@gmail.com"
 #  facebook: deanattali
   github: DevvinK
 #   twitter: daattali
