--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ social-network-links:
 #  instagram: deanat78
 #  youtube: user/deanat78
 #  spotify: yourname
-  telephone: (385)831-5540
+#   telephone: 
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
